--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,110 +2,165 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Nav from '../components/Nav.astro';
+import Banner from '../components/Banner.astro';
+import Container from '../components/Container.astro';
+import { Image } from 'astro:assets';
+import home from "../../public/home.jpg";
 
-const response  = await fetch("https://dummyjson.com/products")
-const data = await response.json()
+const data = [
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/R5549D_LOL_preset_proflowers-mx-tile-wide-lv-new.jpg?v=1703830370&width=1920",
+		title:"First",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920",
+		title:"Second",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/CGPD_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1688041841&width=1920",
+		title:"Third",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://fyf.tac-cdn.net/images/products/small/FYF-232.jpg?auto=webp&quality=60&width=650",
+		title:"Furth",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/R5549D_LOL_preset_proflowers-mx-tile-wide-lv-new.jpg?v=1703830370&width=1920",
+		title:"First",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920",
+		title:"Second",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/CGPD_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1688041841&width=1920",
+		title:"Third",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://fyf.tac-cdn.net/images/products/small/FYF-232.jpg?auto=webp&quality=60&width=650",
+		title:"Furth",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/R5549D_LOL_preset_proflowers-mx-tile-wide-lv-new.jpg?v=1703830370&width=1920",
+		title:"First",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920",
+		title:"Second",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/CGPD_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1688041841&width=1920",
+		title:"Third",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://fyf.tac-cdn.net/images/products/small/FYF-232.jpg?auto=webp&quality=60&width=650",
+		title:"Furth",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/R5549D_LOL_preset_proflowers-mx-tile-wide-lv-new.jpg?v=1703830370&width=1920",
+		title:"First",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920",
+		title:"Second",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/CGPD_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1688041841&width=1920",
+		title:"Third",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://fyf.tac-cdn.net/images/products/small/FYF-232.jpg?auto=webp&quality=60&width=650",
+		title:"Furth",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/R5549D_LOL_preset_proflowers-mx-tile-wide-lv-new.jpg?v=1703830370&width=1920",
+		title:"First",
+		body:"Lorem ipsum dolor sit amet."
+	},
+	{
+		href:"/",
+		image:"https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920",
+		title:"Second",
+		body:"Lorem ipsum dolor sit amet."
+	},
+];
 
-console.log(data)
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<Nav/>
 
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/R5549D_LOL_preset_proflowers-mx-tile-wide-lv-new.jpg?v=1703830370&width=1920"
-				title="First"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920"
-				title="Second"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/CGPD_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1688041841&width=1920"
-				title="Third"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://fyf.tac-cdn.net/images/products/small/FYF-232.jpg?auto=webp&quality=60&width=650"
-				title="Furth"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920"
-				title="Second"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/CGPD_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1688041841&width=1920"
-				title="Third"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://fyf.tac-cdn.net/images/products/small/FYF-232.jpg?auto=webp&quality=60&width=650"
-				title="Furth"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920"
-				title="Second"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/CGPD_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1688041841&width=1920"
-				title="Third"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://fyf.tac-cdn.net/images/products/small/FYF-232.jpg?auto=webp&quality=60&width=650"
-				title="Furth"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/C5374D_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1689247232&width=1920"
-				title="Second"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://cdn.shopify.com/s/files/1/0507/3754/5401/files/CGPD_LOL_preset_ftd-mx-tile-wide-lv-new.jpg?v=1688041841&width=1920"
-				title="Third"
-				body="Lorem ipsum dolor sit amet."
-			/>
-			<Card
-				href="/"
-				image="https://fyf.tac-cdn.net/images/products/small/FYF-232.jpg?auto=webp&quality=60&width=650"
-				title="Furth"
-				body="Lorem ipsum dolor sit amet."
-			/>
-		</ul>
+		<Banner>
+			<Image src={home as any} alt="image" />
+    </Banner>
+
+		<Container>
+			<ul role="list" class="link-card-grid">
+				{
+					data.map(card => {
+						return (
+							<Card
+								href={card.href}
+								image={card.image}
+								title={card.title}
+								body={card.body}
+							/>
+						)
+					})
+				}
+			</ul>
+		</Container>
 	</main>
 </Layout>
 
 <style>
+	*{
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
+
 	main {
 		margin: auto;
-		padding: 1rem;
-		width: 1200px;
-		max-width: calc(100% - 2rem);
 		color: white;
 		font-size: 20px;
 		line-height: 1.6;
 	}
+	
 	.astro-a {
 		position: absolute;
 		top: -32px;
@@ -148,9 +203,23 @@ console.log(data)
 		color: rgb(var(--accent-light));
 	}
 	.link-card-grid {
+		margin-top: 4rem;
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		gap: 2rem;
 		padding: 0;
 	}
+
+
+	@media only screen and (max-width: 950px) {
+		.link-card-grid {
+			grid-template-columns: repeat(2, 1fr);
+		}
+  }
+
+	@media only screen and (max-width: 600px) {
+		.link-card-grid {
+			grid-template-columns: 1fr;
+		}
+  }
 </style>
